2004-10-31  Sven Neumann  <sven@gimp.org>

	* app/dialogs/user-install-dialog.c: started to work on migration of
	user settings (bug #156636). Not at all functional yet.

2004-10-31  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpwidgets.c: allow for mnemonics in radio
	groups created with gimp_radio_group_new().

2004-10-31  DindinX  <dindinx@gimp.org>

	* plug-ins/gfig/gfig-dialog.c
	* plug-ins/gfig/gfig-dobject.c: some more UI improvements.

2004-10-31  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpsizebox.c: added a size entry to edit the
	resolution. This should close bug #151022.

2004-10-31  Sven Neumann  <sven@gimp.org>

	* app/dialogs/resize-dialog.c: connect the offset controls.

2004-10-30  DindinX  <dindinx@gimp.org>

	* plug-ins/gfig/gfig-dobject.c
	* plug-ins/gfig/gfig-style.c: fixed some annoying popup messages at
	the price of a smallish mem-leak that I will fix later.

2004-10-30  Sven Neumann  <sven@gimp.org>

	* app/composite/gimp-composite-generic.c
	(gimp_composite_hue_any_any_any_generic): do nothing if the color
	has no saturation. Patch by Joao S. Bueno. Fixes bug #123296.

2004-10-30  Sven Neumann  <sven@gimp.org>

	* app/actions/image-commands.c (image_scale_cmd_callback): destroy
	the scale dialog when the display is disconnected.

	* app/dialogs/resize-dialog.c: fixed a couple of bugs related to
	the offset area. Still work in progress.

2004-10-30  DindinX  <dindinx@gimp.org>

	* plug-ins/common/newsprint.c: Moved the preview to the left, as
	suggested by Joao S. O. Bueno.

2004-10-30  DindinX  <dindinx@gimp.org>

	* plug-ins/gfig/gfig-dialog.c
	* plug-ins/gfig/gfig-line.c
	* plug-ins/gfig/gfig-line.h
	* plug-ins/gfig/gfig-poly.c
	* plug-ins/gfig/gfig-preview.c
	* plug-ins/gfig/gfig-star.c
	* plug-ins/gfig/gfig-style.c
	* plug-ins/gfig/gfig-style.h: some more cleanups and UI tweaks. Still
	work in progress.

	* plug-ins/gfig/pix-data.h: removed this empty, unused file.

2004-10-30  Sven Neumann  <sven@gimp.org>
